# rust-spatialos-example-project

./: .gitignore  README.md  default_launch.json  spatialos.json
snapshots/: default.json
workers/client_direct/: Cargo.toml  build.json  spatialos.client_direct.worker.json
workers/client_direct/src/: main.rs
workers/client_vtable/: Cargo.toml  build.json  build.rs  spatialos.client_vtable.worker.json
workers/client_vtable/src/: main.rs  schema_types.rs
workers/physics/: Cargo.toml  build.json  spatialos.physics.worker.json
workers/physics/src/: main.rs
