[package]
name = "client_vtable"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spatialos-macro = { git = "https://github.com/Project-StarDust/spatialos-macro.git" }
spatialos-sdk = { git = "https://github.com/Project-StarDust/spatialos-sdk.git" }

[build-dependencies]
spatialos-codegen = { git = "https://github.com/Project-StarDust/spatialos-codegen.git" }